# FaceAnon

./: .gitignore  pyproject.toml
examples/: process_image.py  process_video.py
faceanon/: __init__.py  anonymizer.py  batch.py  cli.py  config.py  datatypes.py  detector.py  engine.py  realtime.py  tracker.py  utils.py
packaging/: build.py  faceanon.spec
tests/: test_anonymizer.py  test_detector.py  test_engine.py  test_tracker.py  test_utils.py
